# icst-ambisonics-plugins

./: .gitignore  BuildScript.ps1  CMakeLists.txt  DecoderPresetConverter.ps1  JucerFilesCreator.ps1  LinuxBuild.ps1  OSXBuild-ARM.ps1  OSXBuild-Intel.ps1  OSXBuild-arm64.ps1  OSXBuild-x64.ps1  OSXBuild.ps1  README.md  WindowsBuild.ps1  readme.txt  versionInformation.txt
.github/workflows/: ci.yml  gitlab-mirror.yml  release.yml
Common/: ActivationDialog.h  AdditionalWindow.h  AmbiBasicSettings.cpp  AmbiBasicSettings.h  AmbiDataSet.cpp  AmbiDataSet.h  AmbiGroup.cpp  AmbiGroup.h  AmbiHelper.cpp  AmbiHelper.h  AmbiLookAndFeel.cpp  AmbiLookAndFeel.h  AmbiPoint.cpp  AmbiPoint.h  AmbiSettings.cpp  AmbiSettings.h  AmbiSettingsCollection.cpp  AmbiSettingsCollection.h  AmbiSettingsSection.cpp  AmbiSettingsSection.h  AmbiSource.cpp  AmbiSource.h  AmbiSourceSet.cpp  AmbiSourceSet.h  AmbiSpeaker.cpp  AmbiSpeaker.h  AmbiSpeakerSet.cpp  AmbiSpeakerSet.h  AudioParameterBoolAmbi.cpp  AudioParameterBoolAmbi.h  AudioParameterBoolAmbiAbs.h  AudioParameterFloatAmbi.cpp  AudioParameterFloatAmbi.h  AudioParameterFloatAmbiAbs.h  AudioParameterIntAmbiAbs.h  AudioParameterSet.h  AudioParams.h  BuildInfo.h  ChannelLayout.cpp  ChannelLayout.h  (+112 more)
Common/bak/: shader.cpp  shader.h  text2D.cpp  text2D.h  texture.cpp
Decoder/: Ambisonic Decoder.jucer  AmbisonicDecoder.jucer  Ambisonics Decoder.jucer  CMakeLists.txt
Decoder/Data/: Debug.filtergraph
Decoder/Source/: AmbiSettingsComponent.cpp  AmbiSettingsComponent.h  CheckBoxCustomComponent.h  CheckBoxFilterCustomComponent.h  CsvImportExport.h  DecoderAmbiSettings.cpp  DecoderAmbiSettings.h  DecoderPresetHelper.h  DecoderSectionControlComponent.cpp  DecoderSectionControlComponent.h  DecoderSettings.cpp  DecoderSettings.h  DecoderSettingsComponent.cpp  DecoderSettingsComponent.h  DecodingPresetHelper.h  EditableTextCustomComponent.h  ExternalImportExport.h  FilterPresetHelper.h  FilterSettingsComponent.cpp  FilterSettingsComponent.h  GainColumnCustomComponent.h  IIRFilterGraph.cpp  IIRFilterGraph.h  MultiDecoderComponent.cpp  MultiDecoderComponent.h  NumericColumnCustomComponent.h  OSCHandler.cpp  OSCHandler.h  OSCHandlerDecoder.cpp  OSCHandlerDecoder.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetInfo.cpp  PresetInfo.h  Radar.h  ScalingComponent.cpp  ScalingComponent.h  SingleFilterSettingsComponent.cpp  (+11 more)
Encoder/: Ambisonic Encoder.jucer  AmbisonicEncoder.jucer  CMakeLists.txt
Encoder/Multi/: CMakeLists.txt
Encoder/Solo/: CMakeLists.txt
Encoder/Source/: ActionClipEditor.cpp  ActionClipEditor.h  ActionEditDialog.h  AirAbsorbationFilter.cpp  AirAbsorbationFilter.h  AirAbsorbtionFilter.cpp  AirAbsorbtionFilter.h  AmbiOSCSender.cpp  AmbiOSCSender.h  AmbiOSCSenderExt.cpp  AmbiOSCSenderExt.h  AnimatorAction.h  AnimatorActionComponent.cpp  AnimatorActionComponent.h  AnimatorComponent.cpp  AnimatorComponent.h  AnimatorDataset.h  AnimatorDialog.h  AnimatorDialogManager.h  AnimatorEngine.cpp  AnimatorEngine.h  AnimatorMainView.cpp  AnimatorMainView.h  AnimatorMovement.h  AnimatorMovementComponent.cpp  AnimatorMovementComponent.h  AnimatorPresetHelper.h  AudioParameterBoolAmbi.cpp  AudioParameterBoolAmbi.h  AudioParameterDistanceEncodingFloat.cpp  AudioParameterDistanceEncodingFloat.h  AudioParameterFloatAmbi.cpp  AudioParameterFloatAmbi.h  ClipEditorDialog.h  ClipEditorDialogManager.h  CommonClipSettings.h  ComponentArguments.h  CustomOscBase.cpp  CustomOscBase.h  CustomOscInput.cpp  (+68 more)
Resources/: OSC_Syntax.xml  Radar_Documentation.xml
Resources/Presets/Decoder_SpeakerSettings/: 10.2.xml  11.1.xml  13.1.xml  22.2.xml  4.0.xml  5.0 Film.xml  5.0 ITU.xml  5.0.2.xml  5.0.4.xml  5.1 Film.xml  5.1 ITU.xml  5.1.2.xml  5.1.4.xml  6.0.xml  6.1.xml  7.0.2.xml  7.0.4.xml  7.0.xml  7.1.2.xml  7.1.4.xml  7.1.xml  8.0.xml  9.1.2.xml  9.1.6.xml  9.1.xml  Auro 3D 9.1.xml  Auro-3D 9.1.xml  Centred Octo.xml  IA_Space_ZHdK.xml  ICST DOM SUB.xml  ICST Kompositionsstudio.xml  LRCS.xml  Notam Studio 3.xml  Regular 2D - Centered Octagon (8).xml  Regular 2D - Dodecagon.xml  Regular 2D - Hexadecagon (16).xml  Regular 2D - Hexagon (6).xml  Regular 2D - Octagon (8).xml  Regular 2D - Quadro (4).xml  Regular 2D - Square (4).xml  (+11 more)
Resources/xml/: osc_syntax.xml  radar_documentation.xml
Scripts/: CommonFileHeader.txt  ReplaceFileHeaders.sh  SourcefilePathsToClipboardCommand.txt  basic_build_sequence.sh
Setup/: Installer_OSX.ps1  build_installer.sh  osx.pkgproj  osx_post_install_project_templates.sh  osx_post_install_track_templates.sh  prepare_win_installer.sh  readme.txt  win64.iss
Setup/ICST_AmbisonicsTemplates/: ICST Mono Ambisonics.RPP  ICST_AmbiPlugins_Mono_o1.RPP  ICST_AmbiPlugins_Mono_o3.RPP  ICST_AmbiPlugins_Mono_o5.RPP  ICST_AmbiPlugins_Multi_O1.RPP  ICST_AmbiPlugins_Multi_O3.RPP  ICST_AmbiPlugins_Multi_O5.RPP  ICST_Ambi_OSC_DEMO.RPP
Setup/ICST_AmbisonicsTrackTemplates/ICST Ambisonics Plugins/: BF_Player_o5.RTrackTemplate  ICST_Bformat-Master_o1.RTrackTemplate  ICST_Bformat-Master_o3.RTrackTemplate  ICST_Bformat-Master_o5.RTrackTemplate  ICST_Bformat_O1.RTrackTemplate  ICST_Bformat_O3.RTrackTemplate  ICST_Bformat_O5.RTrackTemplate  ICST_DECODER_O1.RTrackTemplate  ICST_DECODER_O3.RTrackTemplate  ICST_DECODER_O5.RTrackTemplate  ICST_Encoder-Multi_16x_mono_sources.RTrackTemplate  ICST_Encoder-Multi_4x_mono_sources.RTrackTemplate  ICST_Encoder-Multi_O1.RTrackTemplate  (+21 more)
Setup/ICST_AmbisonicsTrackTemplates/ICST Ambisonics Plugins 3rd party/: AMBEO A-to-B.RTrackTemplate  DearVR_BINAURAL.RTrackTemplate  IEM_BFormat_Manipulator_o3.RTrackTemplate  IEM_Binaural_Decoder_o1.RTrackTemplate  IEM_Binaural_Decoder_o3.RTrackTemplate  IEM_Binaural_Decoder_o5.RTrackTemplate  RODE_Soundfield.RTrackTemplate  ZYLIA_to_Bformat.RTrackTemplate
Setup/Linux/: build-deb.sh  definitions.sh  file_content_generator.sh  postinst
Setup/Windows/: Installer_Win64.ps1  definitions.sh  file_content_generator.sh  prepare_win_installer.sh  win64.iss
Setup/macOS/: definitions.sh  file_content_generator.sh  osx.pkgproj  osx_original_backup.pkgproj  template_definitions.sh
(+29 files in other folders)
