SET(SRC_FILES
../Source/AirAbsorbtionFilter.cpp
../Source/AmbiOSCSender.cpp
../Source/AmbiOSCSenderExt.cpp
../Source/AnimatorActionComponent.cpp
../Source/AnimatorMovementComponent.cpp
../Source/AnimatorComponent.cpp
../Source/CustomOscBase.cpp
../Source/CustomOscInput.cpp
../Source/CustomOscReceiver.cpp
../Source/CustomOscTarget.cpp
../Source/DistanceEncodingComponent.cpp
../Source/DistanceEncodingGraph.cpp
../Source/EncoderSettings.cpp
../Source/EncoderSettingsComponent.cpp
../Source/EncodingSettingsComponent.cpp
../Source/GroupAnimator.cpp
../Source/OSCHandlerEncoder.cpp
../Source/OSCRxSettingsComponent.cpp
../Source/OSCSenderInstance.cpp
../Source/OSCSettingsComponent.cpp
../Source/OSCTargetsComponent.cpp
../Source/PluginEditor.cpp
../Source/PluginProcessor.cpp
../Source/RadarSettingsComponent.cpp
../Source/SourceDefinitionComponent.cpp
../Source/StandardOscTarget.cpp
../Source/UserDefinedParameter.cpp
    
../../Common/AmbiDataSet.cpp
../../Common/AmbiGroup.cpp
../../Common/AmbiPoint.cpp
../../Common/AmbiSource.cpp
../../Common/AmbiSourceSet.cpp
../../Common/AudioParameterBoolAmbi.cpp
../../Common/AudioParameterFloatAmbi.cpp
../../Common/ChannelLayout.cpp
../../Common/CommonImages.cpp
../../Common/Constants.cpp
../../Common/DelayHelper.cpp
../../Common/EncoderConstants.cpp
../../Common/HelpComponent.cpp
../../Common/HelpOscSyntax.cpp
../../Common/HelpRadarInteraction.cpp
../../Common/HelpWebBrowserComponent.cpp
../../Common/JsEditorComponent.cpp
../../Common/LabelCreator.cpp
../../Common/MathHelper.cpp
../../Common/OSCHandler.cpp
../../Common/OSCLogComponent.cpp
../../Common/PointInfoControl.cpp
../../Common/PointSelection.cpp
../../Common/PresetHelper.cpp
../../Common/PresetManagerComponent.cpp
../../Common/Radar2D.cpp
../../Common/Radar3D.cpp
../../Common/RadarComponent.cpp
../../Common/RadarOptions.cpp
../../Common/ScalingInfo.cpp
../../Common/SimpleGraph.cpp
../../Common/StatusMessageHandler.cpp
../../Common/VarDelayBuffer.cpp
../../Common/ZoomSettings.cpp
)

add_subdirectory(Solo)
add_subdirectory(Multi)